<resources>
    <string name="app_name">Sfedu_EXPonent</string>
    <string name="hello_blank_fragment">
        Hello blank fragment
    </string>
    <string name="exp_sfedu"><font color='#3048CF'>exp</font><font color='#FFFFFF'>(sfedu)</font></string>
    <string name="GoButton"><font color='#3048CF'>↓  </font><font color='#FFFFFF'>Поехали</font><font color='#3048CF'>  ↓</font></string>
    <string name="abot_us_txt">
        <font size="25"><b>Что такое SFedU Exponent?\n</b></font>
        <font size="20">SFedU Exponent — это мероприятие на котором каждый может представить свой проект, получить обратную связь или найти инвестора.</font>
    </string>
    <string name="members_txt">
        <font size="18" color="black">Уверенных в себе спикеров с проектами на любых стадиях готовности. Конкретный запрос проекта: что требуется проекту и что получит инвестор? Проект должен быть связан с информационными технологиями.</font>
    </string>
    <string name="expert_txt">
        <font size="18" color="black">Заинтересованность в венчурных инвестициях и готовность высказать экспертное мнение о проектах. </font>
    </string>
    <string name="Itog_dec_2022">
        <u>Итоги exp(sfedu) декабрь 2022</u>
    </string>
    <string name="Itog_may_2022">
        <u>Итоги exp(sfedu) май 2022</u>.
    </string>
    <string name="Itog_nov_2021">
        <u>Итоги exp(sfedu) ноябрь 2021</u>.
    </string>
    <string name="Itog_apr_2021">
        <u>Итоги exp(sfedu) апрель 2021</u>.
    </string>
    <string name="WhereWe"><font size="24" color="black"><b>Южный федеральный университет\n</b></font><font size="23" color="black"><b>Зимний сад\n</b></font><font size="20" color="black">г. Таганрог, пер. Некрасовский, 44\n</font><font size="20" color="black">Плёнкин Антон Павлович</font></string>
</resources>